--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,7 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -38,11 +39,14 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.wasteagram"
+        applicationId "edu.oregonstate.samadurm.wasteagram"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        /// To solve the issue of dex overflowing warning used:
+        /// https://stackoverflow.com/questions/61977122/firestore-issue-cloudfirestoreplugin-java-uses-unchecked-or-unsafe-operations
+        multiDexEnabled true
     }
 
     buildTypes {
