--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,20 @@
+/// To solve the issue:
+/// Plugin project :firebase_core_web not found. Please update settings.gradle.
+/// Plugin project :cloud_firestore_web not found. Please update settings.gradle.
+/// Used post from:
+/// https://stackoverflow.com/questions/61732409/plugin-project-firebase-core-web-not-found
 include ':app'
 
-def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
-def properties = new Properties()
+def flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
 
-assert localPropertiesFile.exists()
-localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+def plugins = new Properties()
+def pluginsFile = new File(flutterProjectRoot.toFile(), '.flutter-plugins')
+if (pluginsFile.exists()) {
+    pluginsFile.withReader('UTF-8') { reader -> plugins.load(reader) }
+}
 
-def flutterSdkPath = properties.getProperty("flutter.sdk")
-assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+plugins.each { name, path ->
+    def pluginDirectory = flutterProjectRoot.resolve(path).resolve('android').toFile()
+    include ":$name"
+    project(":$name").projectDir = pluginDirectory
+}
