--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
-  image_picker: ^0.6.7
   cloud_firestore: ^0.13.7
   firebase_storage: ^3.1.6
+  location: ^3.0.0
+  image_picker: ^0.6.7
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
