--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   location: ^3.0.0
   image_picker: ^0.6.7
   intl: ^0.16.1
-  
+  transparent_image: ^ 1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
